[package]
name = "ultimate_logger"
license = "GPL-3.0-only"
license-file = "LICENSE"
authors = ["Lars Salembier"]
description = "A simple logger for Rust"
repository = "https://github.com/LarsSalembier/ultimateLogger"
readme = "README.md"
keywords = ["logger", "logging", "log", "simple", "ultimate"]
categories = ["logging"]

version = "1.0.0"
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
chrono = "0.4.19"
